--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -12,4 +12,5 @@ jobs:
           python-version: '3.12' 
       - run: uname -a
       - run: pip install -U pytest
+      - run: pip install -r requirements.txt
       - run: pytest
