--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -13,5 +13,5 @@ jobs:
       - run: uname -a
       - run: pip install -U pytest
       - run: pip install -r requirements.txt
-      - run: pip install -r requirements.test.txt 
+      - run: pip install -r /MyProjFolder/requirements.test.txt 
       - run: pytest
